--- a/html-css/execicios/EX001/index.html
+++ b/html-css/execicios/EX001/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-
  <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +11,13 @@
 
  <body>
      <h1>Olá Mundo!!</h1>
-     <p>Esse é meu primeiro documento</p>
-     
+     <hr>
+
+     <p>Esse é meu primeiro Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat ut nostrum aut quos. Fugit, dicta magni. Ducimus voluptas vel facere pariatur nihil repellat adipisci temporibus suscipit, veritatis iure nobis ullam!</p>
+
+     <p>segundo Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eaque quo delectus dolores? Dolor, totam corporis nobis quibusdam reiciendis natus ab odit eius esse illum ullam quod eaque. Quisquam, dolor?</p>
+
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolor ipsa sequi cum pariatur? Molestiae numquam laboriosam blanditiis aspernatur nostrum, consectetur laudantium minus illum dolorum ipsa, ex voluptates voluptatum expedita.</p>     
  </body>
 </html>
 
