--- a/html-css/EX002/index.html
+++ b/html-css/EX002/index.html
@@ -6,10 +6,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>aula 2</title>
+        <title>Páragrafos</title>
     </head>
 
     <body>
+
+        <h1>Páragrafos e quebras de linha</h1>
+        <hr>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci recusandae, impedit iure ipsa ut eligendi ratione suscipit mollitia odit dolorum officia, ullam dignissimos hic obcaecati corrupti ducimus animi sunt minus.</p>
+        
         
     </body>
 </html>
