--- a/html-css/EX004/index.html
+++ b/html-css/EX004/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/icone htlm 5.ico" type="image/x-icon">
     <title>Site com imagem</title>
 </head>
 
@@ -59,7 +60,7 @@
     <p>Também podemos carregar imagens externas</p>
     <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Logo java scrit">
 
-    
+
 
 
 
