--- a/html-css/EX004/index.html
+++ b/html-css/EX004/index.html
@@ -57,6 +57,8 @@
     <img src="Imagens/logo html-650.png" alt="Logo html 5">
     <img src="Imagens/Logo css-650.png" alt="Logo css 5">
 
+    gdfgddf
+
     <p>Também podemos carregar imagens externas</p>
     <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Logo java scrit"> 
 </body>
