--- a/html-css/EX004/index.html
+++ b/html-css/EX004/index.html
@@ -59,6 +59,12 @@
 
     gdfgddf
 
+
+    sdfghfdodf
+
+
+    
+
     <p>Também podemos carregar imagens externas</p>
     <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Logo java scrit"> 
 </body>
