--- a/html-css/EX008/Index.html
+++ b/html-css/EX008/Index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatações de texto</title>
+
+    <style>
+        mark {
+            background-color: red;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -14,12 +21,37 @@
     <h2>Negrito / Destaque</h2>
     <p>Nessa Frasa temos um <b>termo em negrito</b> usando a tag B (não semântica) </p>
     <p>Nesta frase, tenho um <strong>termo em destaque</strong> usando a tag STRONG (semântica)</p>
+    <hr>
 
     <h2>Itálico / Ênfase</h2>
     <p>Nesta frase, temos um <i>termo em itálico</i> usando I (não semântica) </p>
     <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag EM (semântica) </p>
+    <hr>
 
+    <h2>Texto marcado</h2>
+    <p>Podemos criar também <mark>um texto marcado</mark> usando a tag MARK</p>
+    <p>E no outro parágrafo, <mark style="background-color: yellow;">temos outro texto marcado</mark>, mas dessa vez com
+        a cor configurado excluivamente para ele</p>
+    <hr>
 
+    <h2>Texto grande e pequeno</h2>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small></p>
+    <hr>
+
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um <del>texto como excluido</del> para indicar que deve ser lido mas não considerado</p>
+    <hr>
+
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar um <ins>texto como inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois</p>
+    <p>exite tbm o <u>sublinhado</u> com a tag U (não semântica)</p>
+    <hr>
+
+    <h2>texto sobrescrito</h2>
+    <p>Para inserir coisas do tipo x<sup>20</sup>+3</p>
+
+    <h2>texto subscrito</h2>
+    <p>Para inserir coisa do tipo H<sub>2</sub>O
 
 </body>
 
