segunda parte de formatações

--- a/html-css/EX008/Index.html
+++ b/html-css/EX008/Index.html
@@ -51,7 +51,50 @@
     <p>Para inserir coisas do tipo x<sup>20</sup>+3</p>
 
     <h2>texto subscrito</h2>
-    <p>Para inserir coisa do tipo H<sub>2</sub>O
+    <p>Para inserir coisa do tipo H<sub>2</sub>O</p>
+    <hr>
+
+    <h2>Código fonte</h2>
+    <p>O comando <code>document.getElementbyId('teste')</code> é escrito em limguagem javaScript</p>
+
+    <pre>
+        <code>
+    void setup(){
+        Serial.begin(9600);
+        pinMode(13, OUTPUT);
+    }
+
+    void loop(){
+        digitalWrite(13, HIGH); // liga led
+        delay(1000);
+        digitalWrite(13, LOW); // desliga led
+        delay(1000);
+    }
+        </code>
+    </pre>
+    <hr>
+
+    <h2>Citações </h2>
+    <h3>citação simples</h3>
+    <p>Como diria o pai de um amigo: <q>o computador é um burro muito rapido.</q></p>
+
+    <h3>citação completa</h3>
+    <p>Segundo jeff Noble, no seu livro HTML para leigos: </p>
+    <blockquote cite="web.whatsapp.com">
+        A diferença entre elementos inline e um bloco de texto é importante. Os elemnetos HTML neste capitulo descrevem
+        os blocos de texto
+    </blockquote>
+    <hr>
+
+    <h2>Abreviações</h2>
+    <p>estou estudando <abbr title="Hyper text markup language">HTML</abbr> e <abbr
+            title="cascading style sheets">CSS</abbr>. Estou adorando</p>
+    <hr>
+
+    <h2>texto invertido</h2>
+    <p><bdo dir="rtl"> vai cagar </bdo></p>
+
+
 
 </body>
 
