--- a/html-css/EX009/index.html
+++ b/html-css/EX009/index.html
@@ -6,6 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listas</title>
+
+    <style>
+        body {
+            background-color: rgb(190, 224, 233);
+        }
+
+        h2 {
+            font-family: calibri;
+            font-style: italic;
+            font-size: 24pt;
+            color: blue;
+        }
+
+        p {
+            font-family: arial;
+            font-size: 12pt;
+            color: black;
+            offset: 40px;
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -18,6 +40,12 @@
         <li>tomar banho
         <li>trabalhar
     </ol>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+        <br>
+        Laborum earum debitis temporibus quae modi provident
+        laudantium quod iste aspernatur in! Laborum, repellendus! In tempore ad, autem at voluptatem corrupti nesciunt.
+    </p>
 
     <h2>Listas não ordenadas</h2>
     <ul type="disc">
@@ -57,6 +85,8 @@
         <dt>javaScript</dt>
         <dd>Linguagem de programação para craiação da interatividade de um site</dd>
     </dl>
+
+
 
 </body>
 
