--- a/html-css/EX009/index.html
+++ b/html-css/EX009/index.html
@@ -9,20 +9,20 @@
 
     <style>
         body {
-            background-color: rgb(190, 224, 233);
+            background-color: rgb(255, 255, 255);
         }
 
         h2 {
             font-family: calibri;
             font-style: italic;
             font-size: 24pt;
-            color: blue;
+            color: rgb(241, 13, 13);
         }
 
         p {
             font-family: arial;
             font-size: 12pt;
-            color: black;
+            color: rgb(153, 19, 19);
             offset: 40px;
         }
     </style>
