--- a/html-css/EX011/Index.html
+++ b/html-css/EX011/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-
-    <h1>Usando links externos</h1>
-    <p>Você pode acessar o meu <strong>repósitório no github</strong></p>
-
+    <h1>usando links externos</h1>
 
 </body>
 
