--- a/html-css/EX011/Index.html
+++ b/html-css/EX011/Index.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>usando links externos</h1>
-    <p>Você pode acessar o meu <a href="https://github.com/Whilker-Silva" target="blanck" rel="external">repositório no GitHub</a></p>
+    <p>Você pode acessar o meu <a href="https://github.com/Whilker-Silva" target="blanck" rel="external">repositório no GitHub</a></a></p>
+
+    <h1>usando links internos </h1>
+    <p>Se Você quiser, Você também pode acessar a minhas <a href="pag002.html" rel="next">segunda página</a></a></p>
 </body>
+
 </html>
