Navegando com links dentro de pastas

--- a/html-css/EX011/pag002.html
+++ b/html-css/EX011/pag002.html
@@ -10,6 +10,8 @@
 
     <h1>Está é a minha segunda pagina</h1>
     <p>Se você quiser você pode voltar para a <a href="Index.html" rel="prev">priemeira pagina</a></p>
+
+    <p>Você também pode acessar nossa <a href="Noticias/pag003.html" rel="next">pagina de noticias</a></p>
     
 </body>
 </html>
