Inserindo links para downloads

--- a/html-css/EX009/index.html
+++ b/html-css/EX009/index.html
@@ -33,7 +33,7 @@
 <body>
     <h1>Trabalhando com Listas</h1>
     <h2>listas ordenadas</h2>
-    <ol type="I" start="6">
+    <ol type="1" start="6">
         <!-- 1 A a I i-->
         <li>acordar
         <li>escovar os dente
