--- a/html-css/EX011/Index.html
+++ b/html-css/EX011/Index.html
@@ -14,6 +14,15 @@
 
     <h1>usando links internos </h1>
     <p>Se Você quiser, Você também pode acessar a minhas <a href="pag002.html" rel="next">segunda página</a></a></p>
+
+    <h1>Links para download</h1>
+
+    <ul type= "square"> 
+        
+        <li><a href="Livro/10 - Ligações em toda parte.pdf" target="blanck" rel="external" download="10 - Ligações em toda parte.pdf" type="application/pdf">baixar livro em PDF</a></li>
+
+        <li><a href="Livro/10 - Ligações em toda parte.rar" download="10 - Ligações em toda parte.rar" type="application/rar">Baixar livro ZIP</a></li>
+    </ul>
 </body>
 
 </html>
