--- a/html-css/Módulo 1/Desafios/Desafio001/index.html
+++ b/html-css/Módulo 1/Desafios/Desafio001/index.html
@@ -12,15 +12,20 @@
 
     <h1>Desafio das Mensagens</h1>
 
-    <p>*UM</p>
-    <p>**Dois</p>
-    <p>***Três</p>
-    <p>****Quatro</p>
-    <br>
-    <p>****Quatro</p>
-    <p>***Três</p>
-    <p>**Dois</p>
-    <p>*UM</p>
+    <p>
+        *UM <br>
+        **Doi <br>
+        ***Três <br>
+        ****Quatro <br>
+    <p>
+
+
+    <p>
+        ****Quatro <br>
+        ***Três <br>
+        **Dois <br>
+        *UM <br>
+    </p>
 
 </body>
 
