--- a/html-css/Módulo 1/Desafios/Desafio004/index.html
+++ b/html-css/Módulo 1/Desafios/Desafio004/index.html
@@ -50,7 +50,7 @@
     </ul>
 
     <h2>Objetos</h2>
-    <ol type="A">
+    <ol type="a">
         <li>&#x1F52A Código U+1F52A</li>
         <li>&#x1F963 Código U+1F963</li>
         <li>&#x1F4E1 Código U+1F4E1</li>
