--- a/html-css/Módulo 1/Desafios/Desafio006/index.html
+++ b/html-css/Módulo 1/Desafios/Desafio006/index.html
@@ -5,21 +5,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Desafio002/imagens/favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <link rel="shortcut icon" href="imagens/icone-HTML.ico" type="image/x-icon">
+    <title>Tags HTML</title>
 </head>
 
 <body>
 
     <h1>Tags em HTML</h1>
+    <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os termos para descobrir qual tag
+        deverá ser usada em cada situação. </p>
 
-    <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os termos para descobrir qual tag deverá ser usada em cada situação. </p>
+    <h2>Estruturas de texto</h2>
 
-    <h2></h2>
+    <ul>
 
-    <!---->
-    <p><abbr title="usar a tag <p> </p>">Parágrafo</abbr> </p>
+        <li><abbr title="<h1>">Titulo de primeiro nível</abbr></li>
+        <li><abbr title="<p> </p>">Parágrafo</abbr></li>
+        <li><abbr title="<br>">Quebra de linha</abbr></li>
+        <li><abbr title="& lt;       & gt;">Escrever uma tag</abbr></li>
+        <li><abbr title="<!--  -->">Comentário</abbr></li>
+        <li><abbr title="<hr>">Linha horizntal</abbr></li>
+        <li><abbr title="<abbr title> </abbr>">Abreviação</abbr></li>
+        <li><abbr title="<img src= alt=>">Imagem</abbr></li>
+        <li><abbr title="<address> </address>">Endereço</abbr></li>
+        <li><abbr title="&#x + valor hexadecimal">Inserir emoji</abbr></li>
+        <li><abbr title="<link rel=shortcut icon + href=favicon.ico + type=image/x-icon>">Icone da aba</abbr></li>
 
+    </ul>
+
+    <h2>Símbolos</h2>
+
+    <ul>
+        <li> &reg; <abbr title="& reg;">Marca registrada</abbr></li>
+        <li> &copy; <abbr title="& copy;">Copywrite</abbr></li>
+        <li> &delta; <abbr title="& delta;">Delta minúsculo</abbr></li>
+        <li> &Delta; <abbr title="& Delta;">Delta maiúsculo</abbr></li>
+        <li> &euro; <abbr title="& euro;">Euro</abbr></li>
+        <li> &cent; <abbr title="& cent;">Cents</abbr></li>
+
+    </ul>
+
+    <h2>Formatações</h2>
+
+    <ul>
+        <li><abbr title="<strong> </strong>"><strong>Negrito/destaque</strong></abbr></li>
+        <li><abbr title="<em> </em>"><em>Itálico/ênfase</em></abbr></li>
+        <li><abbr title="<mark style= background-color: rgb(0, 0, 0);)> </mark>"> <mark
+                    style="background-color: rgb(123, 224, 123);">Texto grifado</mark></abbr></li>
+        <li><abbr title="<small> </small>"><small>Texto pequeno</small></abbr></li>
+        <li><abbr title="<big> </big>"><big>Texto grande</big></abbr></li>
+        <li><abbr title="<del> </del"><del>Texto deletado</del></abbr></li>
+        <li><abbr title="<ins> </ins>"><ins>Texto inserido/sublinhado</ins></abbr></li>
+        <li><abbr title="<sub> </sub>">Texto subescrito H<sub>2</sub>O</abbr></li>
+        <li><abbr title="<sup> </sup>">Texto sobrescrito 6<sup>2</sup></abbr></li>
+
+        <li><abbr title="<code> </code>"><code>Liha de código</code></abbr></li>
+        <li><abbr title="<pre>  <code> </code>   </pre>"><code>Sequencia de código</code></abbr></li>
+
+        <li><abbr title="<q> </q>"><q>Citação simples</q></abbr></li>
+        <li><abbr title="<blockquote> </blockquote>">
+                <blockquote>Citação completa</blockquote>
+            </abbr></li>
+    </ul>
+
+    <h2>Listas</h2>
+
+    <ul>
+
+        <li><abbr title="<ul type=> </ul>">Lista não ordenada</abbr></li>
+        <li><abbr title="<ol type= start=> </ol>">Lista ordenada</abbr></li>
+        <li><abbr title="<dl> </dl>">Lista de definição</abbr></li>
+        <ul>
+            <li><abbr title="<dt> </dt>">Item a ser definido</abbr></li>
+            <li><abbr title="<dd> </dd>">Definição do item a cima</abbr></li>
+        </ul>
+
+
+
+    </ul>
+
+    <h2>Links</h2>
+
+    <ul>
+        <li><abbr title="<a href= + rel next></a>">Link interno para próxima página</abbr></li>
+        <li><abbr title="<a href= + rel prev></a>">Link interno para página anterior</abbr></li>
+        <li><abbr title="<a href= + targert blanck + rel external></a>">Link externo</abbr></li>
+        <li><abbr title="<a href= + download= + type=></a>">Link para download</abbr></li>       
+    </ul>
 </body>
 
 </html>
