Inserindo vídeos dinâwmicos

--- a/html-css/Módulo 1/Exemplos/EX011/index.html
+++ b/html-css/Módulo 1/Exemplos/EX011/index.html
@@ -32,11 +32,12 @@
                 download="Voz 004.mp3" type="aplicativo/mpeg4">Clique aqui para baixar o arquivo em mp3</a></p>
     </audio>
 
-    <!--Vídeos-->
+    <!--Vídeos de hospedagem interna-->
     <h1>Reproduzindo vídeos</h1>
+    <h2>Hospedagem interna</h2>
     <p>Vamos aprender a Reproduzir vídeos em HTML5 que estão hospedados localmente</p>
 
-    <video width="500" controls>
+    <video width="560" poster="imagens/tumb.png" controls>
         <source src="midias/Video-Passinho-Debochado-1.mp4" type="video/mp4">
         <source src="midias/Video-Passinho-Debochado-1.m4v" type="video/mp4">
         <source src="midias/Video-Passinho-Debochado-1.webm" type="video/webm">
@@ -44,6 +45,12 @@
                 href="midias/Video-Passinho-Debochado-1.mp4" target="blanck" download="Video-Passinho-Debochado-1.mp4"
                 type="application/mp4">Clique aqui para baixar</a></p>
     </video>
+
+    <!--Vídeos de hospedagem externa-->
+    <h2>Hospedagem externa</h2>
+    <p>Vamos aprender a Reproduzir vídeos em HTML5 que estão hospedados remotamente</p>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hs_9EDnfuM0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 
 </html>
