--- a/html-css/Módulo 1/Exemplos/EX008/Index.html
+++ b/html-css/Módulo 1/Exemplos/EX008/Index.html
@@ -92,7 +92,7 @@
     <hr>
 
     <h2>texto invertido</h2>
-    <p><bdo dir="rtl"> vai cagar </bdo></p>
+    <p><bdo dir="rtl"> texto invertido </bdo></p>
 
 
 
