--- a/html-css/Módulo 2/capitulo-14/ex02/ex02.html
+++ b/html-css/Módulo 2/capitulo-14/ex02/ex02.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes com google fonts</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Festive&family=Kaushan+Script&family=Pacifico&display=swap');
+
+        body {
+            font-family: 'Festive', cursive;
+        }
+
+        h1 {
+            font-family: 'Kaushan Script', cursive;
+        }
+    </style>
+
 </head>
+
 <body>
-    
+    <main>
+        <h1>Titulo</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi aperiam fugit, aspernatur vitae laboriosam
+            quos nemo temporibus vel sed quas, expedita earum voluptates numquam error impedit maxime. Fugit, animi
+            cumque.
+        </p>
+    </main>
 </body>
+
 </html>
