--- a/html-css/Módulo 2/capitulo-15/ex01/ex01.html
+++ b/html-css/Módulo 2/capitulo-15/ex01/ex01.html
@@ -11,40 +11,40 @@
 </head>
 
 <body>
-    <h1>Criando sites com HTML e CSS</h1>
+    <h1 id= "principal">Criando sites com HTML e CSS</h1>
 
-    <h2>Aprendendo HTML</h2>
-    <h3 id="basico">HTML basico</h3>
+    <h1>Aprendendo HTML</h2>
+    <h2 id="basico">HTML basico</h3>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus nostrum illum sint nulla possimus
         eaque impedit minima accusamus nesciunt quisquam ut ullam omnis maxime eum et voluptatum, fuga deleniti.
     </p>
-    <h3>HTML intermediário</h3>
+    <h2>HTML intermediário</h3>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut molestiae ex odio animi culpa. Non, laborum,
         numquam minima harum quas nihil facilis alias dolor incidunt reiciendis laudantium, aliquam tenetur
         exercitationem.
     </p>
-    <h3>HTML avançado</h3>
+    <h2>HTML avançado</h3>
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam quia expedita sunt provident suscipit
         recusandae consectetur facere dolorem quidem, perspiciatis eum quod id culpa similique incidunt impedit, eius
         quae. Maxime!
     </p>
 
-    <h2>Aprendendo CSS</h2>
-    <h3 id="basico">CSS basico</h3>
+    <h1>Aprendendo CSS</h2>
+    <h2>CSS basico</h3>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita dolores, facere similique minus sed hic
         laborum veniam atque porro, labore illo magni totam sapiente impedit. Illo sed tempora iste debitis.
     </p>
-    <h3>CSS intermediário</h3>
+    <h2>CSS intermediário</h3>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sapiente inventore soluta, expedita obcaecati
         adipisci voluptas laborum. A officia, error mollitia nam iure consectetur, natus, nihil corporis atque sit
         optio!
     </p>
-    <h3>CSS avançado</h3>
+    <h2>CSS avançado</h3>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, ipsam debitis, sed incidunt tempora optio
         rerum eaque quo reiciendis dolor necessitatibus accusantium, repellendus quisquam eos hic cupiditate consequatur
