bordas de caixas

--- a/html-css/Módulo 2/capitulo-16/ex02/ex02.html
+++ b/html-css/Módulo 2/capitulo-16/ex02/ex02.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Meu site</h1>
         <nav>
-            <a href="#">a</a> <br>
+            <a href="#">a</a>
             <a href="#">b</a>
             <a href="#">c</a>
             <a href="#">d</a>
@@ -26,56 +26,40 @@
 
     <main>
 
-        <div id="titulos">
-
-            <ul>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <ul>
-                    <li>fdsafasd</li>
-                    <li>fdsafasd</li>
-                    <li>fdsafasd</li>
-                    <li>fdsafasd</li>
-                    <li>fdsafasd</li>
-                </ul>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-                <li>fdsafasd</li>
-
-            </ul>
-
-        </div>
-
-        <div id="textos">
+        <section id="lista">
 
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eligendi repudiandae reiciendis in error
-                sunt quas quaerat neque maiores, debitis at consectetur quae maxime voluptas, qui saepe aspernatur?
-                Itaque, deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aliquam saepe
-                molestias, amet sint est et delectus necessitatibus dolorem cum dolore natus, velit, placeat doloremque
-                non voluptatum neque obcaecati beatae. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Deleniti, dicta! Natus nostrum officia, est a iusto modi maxime doloremque suscipit perferendis
-                voluptatibus totam doloribus corrupti, cum esse molestiae tempora illum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolore delectus nesciunt assumenda voluptates molestias. Provident, modi vitae! Debitis quasi hic aliquam earum eius enim, perferendis corporis fuga quam consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi esse ut temporibus recusandae ullam enim rerum facere, voluptates officiis ratione ipsum, cum, quod tenetur eum nihil. Eaque id nesciunt voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus provident mollitia delectus voluptate tenetur aperiam aliquid nulla at quis soluta natus corporis corrupti perspiciatis voluptates eaque, quae maiores! Aperiam, quos.
             </p>
+           
+        </section>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe obcaecati tempore amet fugit omnis, doloribus dolore reiciendis maiores totam accusantium perferendis delectus sint, provident praesentium sapiente ducimus voluptates dicta consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure magni quae odio quidem alias voluptates neque maxime quas culpa quo sit asperiores incidunt facere dignissimos, aperiam quia ut, molestiae nostrum?
-            </p>
+        <section id="texto">
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolore delectus nesciunt assumenda voluptates molestias. Provident, modi vitae! Debitis quasi hic aliquam earum eius enim, perferendis corporis fuga quam consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi esse ut temporibus recusandae ullam enim rerum facere, voluptates officiis ratione ipsum, cum, quod tenetur eum nihil. Eaque id nesciunt voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus provident mollitia delectus voluptate tenetur aperiam aliquid nulla at quis soluta natus corporis corrupti perspiciatis voluptates eaque, quae maiores! Aperiam, quos.
+                </p>
 
 
-        </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolore delectus nesciunt assumenda voluptates molestias. Provident, modi vitae! Debitis quasi hic aliquam earum eius enim, perferendis corporis fuga quam consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi esse ut temporibus recusandae ullam enim rerum facere, voluptates officiis ratione ipsum, cum, quod tenetur eum nihil. Eaque id nesciunt voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus provident mollitia delectus voluptate tenetur aperiam aliquid nulla at quis soluta natus corporis corrupti perspiciatis voluptates eaque, quae maiores! Aperiam, quos.
+                </p>
+
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolore delectus nesciunt assumenda voluptates molestias. Provident, modi vitae! Debitis quasi hic aliquam earum eius enim, perferendis corporis fuga quam consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi esse ut temporibus recusandae ullam enim rerum facere, voluptates officiis ratione ipsum, cum, quod tenetur eum nihil. Eaque id nesciunt voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus provident mollitia delectus voluptate tenetur aperiam aliquid nulla at quis soluta natus corporis corrupti perspiciatis voluptates eaque, quae maiores! Aperiam, quos.
+                </p>
+        </section>
 
     </main>
 
     <footer>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, numquam. Repellat eligendi earum modi
+            quibusdam quas aspernatur tempore reprehenderit ipsa dolor, minima nihil! Porro ut ullam, itaque in natus
+            temporibus.
+        </p>
 
     </footer>
 
