Resolução do desafio

--- a/html-css/Módulo 2/desafio/desafio.html
+++ b/html-css/Módulo 2/desafio/desafio.html
@@ -61,7 +61,7 @@
                 empresa para a criação de um mascote.
             </p>
             <picture>
-                <source media="(max-width: 1050px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png" type="image/png">
                 <img src="imagens/dan-droids.png" alt="Dandroids grande">
             </picture>
             <P>
@@ -77,7 +77,7 @@
                 de uma maneira mais agradável.
             </p>
             <picture>
-                <source media="(max-width: 1050px)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
+                <source media="(max-width: 600PX)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
                 <img src="imagens/irina-blok.jpg" alt="irina-blok">
             </picture>
             <p>
