--- a/html-css/Módulo 2/desafio/desafio.html
+++ b/html-css/Módulo 2/desafio/desafio.html
@@ -161,7 +161,7 @@
     <!--inicio do rodapé-->
     <footer>
 
-        <p>Site criado por <a href="https://github.com/" target="blanck" rel="external">Whilker Henrique</a> para as
+        <p>Site criado por <a href="https://github.com/Whilker-silva" target="blanck" rel="external">Whilker Henrique</a> para as
             aulas de HTML 5 e CSS 3 do <a href="https://www.cursoemvideo.com/" target="blanck"
                 rel="external">CursoemVideo</a>.</p>
 
